src/objects/Chinese_Term__c.object
<CustomObject>
    <fields>
        <fullName>Character__c</fullName>
        <label>Character</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Session_Date__c</fullName>
        <label>First Session Date</label>
        <summarizedField>Flashcard__c.Completed_Date__c</summarizedField>
        <summaryForeignKey>Flashcard__c.Chinese_Term__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guest_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guest Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Session_Date__c</fullName>
        <label>Last Session Date</label>
        <summarizedField>Flashcard__c.Completed_Date__c</summarizedField>
        <summaryForeignKey>Flashcard__c.Chinese_Term__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Level_Last_Updated__c</fullName>
        <label>Level Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Correct__c</fullName>
        <formula>Total_Number_Correct__c / Total_Number_of_Sessions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Correct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Incorrect__c</fullName>
        <formula>Total_Number_Incorrect__c / Total_Number_of_Sessions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Incorrect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pin_Yin__c</fullName>
        <label>Pin Yin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <label>Previous Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sound_Link__c</fullName>
        <label>Sound Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Number_Correct__c</fullName>
        <label>Total Number Correct</label>
        <summaryFilterItems>
            <field>Flashcard__c.Number_of_Times_Incorrect__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flashcard__c.Completed_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flashcard__c.Chinese_Term__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Incorrect__c</fullName>
        <label>Total Number Incorrect</label>
        <summaryFilterItems>
            <field>Flashcard__c.Number_of_Times_Incorrect__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flashcard__c.Completed_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flashcard__c.Chinese_Term__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Sessions__c</fullName>
        <label>Total Number of Sessions</label>
        <summaryFilterItems>
            <field>Flashcard__c.Completed_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flashcard__c.Chinese_Term__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Chinese Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>English__c</columns>
        <columns>Character__c</columns>
        <columns>Pin_Yin__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Active__c</columns>
        <columns>Level__c</columns>
        <columns>Total_Number_of_Sessions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Guest_Terms</fullName>
        <columns>NAME</columns>
        <columns>English__c</columns>
        <columns>Character__c</columns>
        <columns>Pin_Yin__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Active__c</columns>
        <columns>Level__c</columns>
        <columns>Total_Number_of_Sessions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Guest_Owned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Guest Terms</label>
    </listViews>
    <listViews>
        <fullName>My_Terms</fullName>
        <columns>NAME</columns>
        <columns>English__c</columns>
        <columns>Character__c</columns>
        <columns>Pin_Yin__c</columns>
        <columns>Sound_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Level__c</columns>
        <columns>Last_Session_Date__c</columns>
        <columns>Total_Number_of_Sessions__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Guest_Owned__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Terms</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Chinese Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chinese Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>